# CORE                                                                                     #
#   Add here everything which connected to the core: (spells,groups,maps etc..)            #
#                                                                                          #
############################################################################################

~>XX.08.2012:

- Fix DynamicObject AoE effects for invisible targets e.g. Flare.
- Fix prayer of mending bonus from t9 healing 2 piece set. (Merge to TC (Apr 27, 2012))
- Correct tick damage for health funnel.
- Fix wrong target in Bloodthirst spell script.
- Fixed creature passengers falling off vehicles at client side.
- Rogue T9 2P - Should proc only from Rupture ticks.

~>30.07.2012:

- Fix item Mysterious Egg.
- Fix Lifebloom.
- Fix crash when doing "A Pawn on the Eternal Board".
- Fix Crash Pit Of Saron.
- Fix ICC: Sindragosa.
- Fix ICC: Lich King.
- Fix Ulduar: Razorscale.
- Fix Glyph of Totem of Wrath. (Proc the spells that have DEST target when there is no other target info.)

~>23.07.2012:

- Fix Dancing Rune Weapon.
- Elemental focus(shaman talent) correct proc.
- Fixes double healing from Death Strike.
- Add Reset Cooldowns, Hp, Mana, Rage and Runic Power in Circle of Wills.
- Fixed crashes on despawning abominations during Professor Putricide's phase transition.
- Fix Blood-Queen Lana'thel.
- Fix ICC: Lich King.
- Fix Achievement: Not Even a Scratch. (Merge to TC (Apr 22, 2012))
- Battleground/Strand of the Ancients: Fix broken gate state.
- Increased default ground search range, 10 yards was insufficient for many flying creatures.
- Attempt to fix some rare steady shot crashes.
- Changed how boss creatures are identified, creature_template.
- Disable LoS check for destroyed destructible buildings.
- Set melee sheath as default only for creatures that do not have creature_addon data.
- Fix holy shock cast on friendly opposing team going on cooldown and saying invalid target.