@@ -358,7 +358,8 @@ class npc_bone_spike : public CreatureScript
         {
             npc_bone_spikeAI(Creature* creature) : Scripted_NoMovementAI(creature), _hasTrappedUnit(false)
             {
-                ASSERT(creature->GetVehicleKit());
+                // Disable vehicle stuff, could cause client freeze
+                // ASSERT(creature->GetVehicleKit());
             }
 
             void JustDied(Unit* /*killer*/)
@@ -379,7 +380,8 @@ class npc_bone_spike : public CreatureScript
             void IsSummonedBy(Unit* summoner)
             {
                 DoCast(summoner, SPELL_IMPALED);
-                summoner->CastSpell(me, SPELL_RIDE_VEHICLE, true);
+                // Disable vehicle stuff, could cause client freeze
+                // summoner->CastSpell(me, SPELL_RIDE_VEHICLE, true);
                 _events.ScheduleEvent(EVENT_FAIL_BONED, 8000);
                 _hasTrappedUnit = true;
             }
